[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/LevelSelect.gd" type="Script" id=2]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1036.0
margin_bottom = 880.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer"]
margin_right = 51.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 51 )
text = "level1"

[node name="Preview" type="VBoxContainer" parent="."]
margin_left = 1056.0
margin_right = 1601.0
margin_bottom = 900.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureCenter" type="CenterContainer" parent="Preview"]
margin_right = 545.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )

[node name="TextureRect" type="TextureRect" parent="Preview/TextureCenter"]
margin_left = 272.0
margin_top = 200.0
margin_right = 272.0
margin_bottom = 200.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="TextCenter" type="CenterContainer" parent="Preview"]
margin_top = 404.0
margin_right = 545.0
margin_bottom = 900.0
rect_min_size = Vector2( 0, 496 )

[node name="RichTextLabel" type="RichTextLabel" parent="Preview/TextCenter"]
margin_right = 545.0
margin_bottom = 496.0
rect_min_size = Vector2( 545, 496 )
focus_mode = 2
text = "Description thing uh hi"
selection_enabled = true
